[package]
name = "rust-md-to-pdf"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
comrak = "0.18"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
base64 = "0.21"
uuid = { version = "1.4", features = ["v4"] }
